fix: hid x-overflow in playlist page

--- a/src/components/playlist/styles/playlist-page.css
+++ b/src/components/playlist/styles/playlist-page.css
@@ -1,6 +1,7 @@
 .scrollbar-playlist {
     grid-area: Main;
     overflow-y: scroll;
+    overflow-x: hidden;
     visibility: hidden;
     transition: 1s all 0.1s ease-out;
     margin: 5px;
